Minor scrollbar fix

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -19,10 +19,6 @@ main {
   color: $tx-l;
 }
 
-#__next {
-  height: 100vh;
-  width: 100%;
-}
 a {
   text-decoration: none;
   cursor: pointer;
